# cross-platform-c-example

./: .clang-format  .editorconfig  README.md  main.c  meson.build  sleep.c  sleep.h
src/: main.c  sleep.c  sleep.h
